# src/docs/swagger.json
@@ -434,11 +434,16 @@
                 "summary": "Get chats for user",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "Search name",
+                        "name": "search",
+                        "in": "query"
+                    },
+                    {
                         "type": "integer",
                         "description": "Page",
                         "name": "page",
-                        "in": "query",
-                        "required": true
+                        "in": "query"
                     }
                 ],
                 "responses": {
